Update API Endpoints, Fix bugs.
