# api/swagger.json
@@ -262,6 +262,28 @@
                 }
             }
         },
+        "/return/{reservation_id}": {
+            "post": {
+                "summary": "利用中のReservationについて利用完了したことを通知します",
+                "parameters": [
+                    {
+                        "name": "reservation_id",
+                        "in": "path",
+                        "description": "ReservationのId",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "tags": [
+                    "Reservation"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "完了した場合"
+                    }
+                }
+            }
+        },
         "/categories/{id}": {
             "get": {
                 "summary": "指定したidのカテゴリに関する詳細を返します",
@@ -472,17 +494,17 @@
                         }
                     },
                     {
-                        "name": "start_at",
+                        "name": "since_at",
                         "in": "query",
-                        "description": "予約開始時刻",
+                        "description": "指定時間以降に重なるものを検索\n現在進行形の無期限貸出が存在する場合は、この値によらず含まれます。\n",
                         "required": false,
                         "type": "string",
                         "format": "date-time"
                     },
                     {
-                        "name": "end_at",
+                        "name": "to_at",
                         "in": "query",
-                        "description": "予約終了時刻。\n現在進行形の無期限貸出が存在する場合は、この値によらず含まれます。\n",
+                        "description": "指定時間以前に重なるものを検索\n現在進行形の無期限貸出が存在する場合は、この値によらず含まれます。\n",
                         "required": false,
                         "type": "string",
                         "format": "date-time"
@@ -582,7 +604,7 @@
                 }
             }
         },
-        "/user/{user_name}": {
+        "/users/{user_name}": {
             "get": {
                 "summary": "ユーザーに関する情報を取得します",
                 "parameters": [
@@ -593,6 +615,9 @@
                         "required": true,
                         "type": "string"
                     }
+                ],
+                "tags": [
+                    "UserInfo"
                 ],
                 "responses": {
                     "200": {
@@ -644,7 +669,7 @@
                         "description": "変更したいユーザー情報",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/UserInfoResponse"
+                            "$ref": "#/definitions/UserInfoRequest"
                         }
                     }
                 ],
@@ -682,6 +707,23 @@
                 "responses": {
                     "200": {
                         "description": "変更が完了"
+                    }
+                }
+            }
+        },
+        "/my/profile": {
+            "get": {
+                "summary": "現在ログイン中の利用者の詳細情報を取得します",
+                "tags": [
+                    "My",
+                    "UserInfo"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ユーザー情報",
+                        "schema": {
+                            "$ref": "#/definitions/UserInfoResponse"
+                        }
                     }
                 }
             }
@@ -824,7 +866,7 @@
                     "type": "string",
                     "description": "予約時の要件"
                 },
-                "user": {
+                "users": {
                     "type": "array",
                     "items": {
                         "type": "string"
@@ -869,7 +911,7 @@
                 "owner": {
                     "$ref": "#/definitions/IdNamePair"
                 },
-                "user": {
+                "users": {
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/IdNamePair"
@@ -909,6 +951,54 @@
                 }
             }
         },
+        "ReservationOverviewResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string",
+                    "description": "ReservationのId"
+                },
+                "comment": {
+                    "type": "string",
+                    "description": "Reservationのcomment"
+                },
+                "object_tag": {
+                    "$ref": "#/definitions/IdNamePair"
+                },
+                "created_at": {
+                    "type": "string",
+                    "format": "date-time",
+                    "description": "予約を行った日時"
+                },
+                "modified_at": {
+                    "type": "string",
+                    "format": "date-time",
+                    "description": "最終更新日"
+                },
+                "priority": {
+                    "type": "number",
+                    "description": "優先度(列挙型にする予定)"
+                },
+                "start_at": {
+                    "type": "string",
+                    "format": "date-time",
+                    "description": "予約の開始日時"
+                },
+                "end_at": {
+                    "type": "string",
+                    "format": "date-time",
+                    "description": "予約の終了日時"
+                },
+                "is_endless": {
+                    "type": "boolean",
+                    "description": "予約の終了が無期限であるかどうか"
+                },
+                "is_active": {
+                    "type": "boolean",
+                    "description": "現在利用中なものであるかどうか"
+                }
+            }
+        },
         "CategoryRequest": {
             "type": "object",
             "properties": {
@@ -945,6 +1035,15 @@
                 }
             }
         },
+        "UserInfoRequest": {
+            "type": "object",
+            "properties": {
+                "display_name": {
+                    "type": "string",
+                    "description": "表示名"
+                }
+            }
+        },
         "UserInfoResponse": {
             "type": "object",
             "properties": {
@@ -963,6 +1062,25 @@
                 "profile_thumbnail_image_uri": {
                     "type": "string",
                     "description": "プロフィールimageサムネイルuri"
+                }
+            }
+        },
+        "UserReservationStatus": {
+            "type": "object",
+            "properties": {
+                "reserved_items": {
+                    "description": "自身が予約を行ったものを示します",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/ReservationOverviewResponse"
+                    }
+                },
+                "assigned_items": {
+                    "description": "利用者としてアサインされた予約を示します",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/ReservationOverviewResponse"
+                    }
                 }
             }
         },
